@@ -23,7 +23,7 @@ REQUIREMENTS:
  * librsync v0.9.6 or later
  * GnuPG for encryption
  * fasteners 0.14.1 or later for concurrency locking
- * for scp/sftp -- python-paramiko and python-pycryptopp
+ * for scp/sftp -- python-paramiko
  * for ftp -- lftp version 3.7.15 or later
  * Boto 2.0 or later for single-processing S3 or GCS access (default)
  * Boto 2.1.1 or later for multi-processing S3 access
