@@ -33,7 +33,6 @@ from builtins import object
 import errno
 import os
 import sys
-import socket
 import time
 import re
 import getpass
@@ -62,9 +61,6 @@ from duplicity.errors import InvalidBackendURL
 from duplicity.errors import UnsupportedBackendScheme
 
 import duplicity.backends
-
-# todo: this should really NOT be done here
-socket.setdefaulttimeout(globals.timeout)
 
 _backends = {}
 _backend_prefixes = {}
